kubernetes/argocd/argocd-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: argo.konnektr.io
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            group: ""
            name: argocd-tls
